promql/parser/y.output

state 0
	$accept: .start $end 

	error  shift 6
	START_METRIC  shift 2
	START_SERIES_DESCRIPTION  shift 3
	START_EXPRESSION  shift 4
	START_METRIC_SELECTOR  shift 5
	.  error

	start  goto 1

state 1
	$accept:  start.$end 
	start:  start.EOF 

	$end  accept
	EOF  shift 7
	.  error


state 2
	start:  START_METRIC.metric 
	label_set: .    (126)

	IDENTIFIER  shift 16
	LEFT_BRACE  shift 29
	METRIC_IDENTIFIER  shift 21
	LAND  shift 17
	LOR  shift 18
	LUNLESS  shift 19
	AVG  shift 11
	BOTTOMK  shift 12
	COUNT  shift 14
	COUNT_VALUES  shift 15
	MAX  shift 20
	MIN  shift 22
	QUANTILE  shift 24
	STDDEV  shift 25
	STDVAR  shift 26
	SUM  shift 27
	TOPK  shift 28
	BY  shift 13
	OFFSET  shift 23
	.  reduce 126 (src line 663)

	metric_identifier  goto 9
	label_set  goto 10
	metric  goto 8

state 3
	start:  START_SERIES_DESCRIPTION.series_description 
	label_set: .    (126)

	IDENTIFIER  shift 16
	LEFT_BRACE  shift 29
	METRIC_IDENTIFIER  shift 21
	LAND  shift 17
	LOR  shift 18
	LUNLESS  shift 19
	AVG  shift 11
	BOTTOMK  shift 12
	COUNT  shift 14
	COUNT_VALUES  shift 15
	MAX  shift 20
	MIN  shift 22
	QUANTILE  shift 24
	STDDEV  shift 25
	STDVAR  shift 26
	SUM  shift 27
	TOPK  shift 28
	BY  shift 13
	OFFSET  shift 23
	.  reduce 126 (src line 663)

	metric_identifier  goto 9
	label_set  goto 10
	metric  goto 31
	series_description  goto 30

state 4
	start:  START_EXPRESSION.comment_expr 
	start:  START_EXPRESSION.comment_expr expr 
	start:  START_EXPRESSION.EOF 
	start:  START_EXPRESSION.COMMENT EOF 
	start:  START_EXPRESSION.expr 

	COMMENT  shift 34
	EOF  shift 33
	IDENTIFIER  shift 48
	LEFT_BRACE  shift 68
	LEFT_PAREN  shift 50
	METRIC_IDENTIFIER  shift 21
	NUMBER  shift 49
	STRING  shift 51
	ADD  shift 66
	LAND  shift 17
	LOR  shift 18
	LUNLESS  shift 19
	SUB  shift 67
	AVG  shift 55
	BOTTOMK  shift 56
	COUNT  shift 57
	COUNT_VALUES  shift 58
	MAX  shift 59
	MIN  shift 60
	QUANTILE  shift 61
	STDDEV  shift 62
	STDVAR  shift 63
	SUM  shift 64
	TOPK  shift 65
	BY  shift 13
	OFFSET  shift 23
	.  error

	aggregate_op  goto 47
	metric_identifier  goto 53
	unary_op  goto 52
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 35
	function_call  goto 38
	label_matchers  goto 54
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46
	comment_expr  goto 32

state 5
	start:  START_METRIC_SELECTOR.vector_selector 

	IDENTIFIER  shift 16
	LEFT_BRACE  shift 68
	METRIC_IDENTIFIER  shift 21
	LAND  shift 17
	LOR  shift 18
	LUNLESS  shift 19
	AVG  shift 11
	BOTTOMK  shift 12
	COUNT  shift 14
	COUNT_VALUES  shift 15
	MAX  shift 20
	MIN  shift 22
	QUANTILE  shift 24
	STDDEV  shift 25
	STDVAR  shift 26
	SUM  shift 27
	TOPK  shift 28
	BY  shift 13
	OFFSET  shift 23
	.  error

	metric_identifier  goto 53
	label_matchers  goto 54
	vector_selector  goto 69

state 6
	start:  error.    (10)

	.  reduce 10 (src line 196)


state 7
	start:  start EOF.    (9)

	.  reduce 9 (src line 195)


state 8
	start:  START_METRIC metric.    (1)

	.  reduce 1 (src line 165)


state 9
	metric:  metric_identifier.label_set 
	label_set: .    (126)

	LEFT_BRACE  shift 29
	.  reduce 126 (src line 663)

	label_set  goto 70

state 10
	metric:  label_set.    (104)

	.  reduce 104 (src line 650)


state 11
	metric_identifier:  AVG.    (105)

	.  reduce 105 (src line 655)


state 12
	metric_identifier:  BOTTOMK.    (106)

	.  reduce 106 (src line 655)


state 13
	metric_identifier:  BY.    (107)

	.  reduce 107 (src line 655)


state 14
	metric_identifier:  COUNT.    (108)

	.  reduce 108 (src line 655)


state 15
	metric_identifier:  COUNT_VALUES.    (109)

	.  reduce 109 (src line 655)


state 16
	metric_identifier:  IDENTIFIER.    (110)

	.  reduce 110 (src line 655)


state 17
	metric_identifier:  LAND.    (111)

	.  reduce 111 (src line 655)


state 18
	metric_identifier:  LOR.    (112)

	.  reduce 112 (src line 655)


state 19
	metric_identifier:  LUNLESS.    (113)

	.  reduce 113 (src line 655)


state 20
	metric_identifier:  MAX.    (114)

	.  reduce 114 (src line 655)


state 21
	metric_identifier:  METRIC_IDENTIFIER.    (115)

	.  reduce 115 (src line 655)


state 22
	metric_identifier:  MIN.    (116)

	.  reduce 116 (src line 655)


state 23
	metric_identifier:  OFFSET.    (117)

	.  reduce 117 (src line 655)


state 24
	metric_identifier:  QUANTILE.    (118)

	.  reduce 118 (src line 655)


state 25
	metric_identifier:  STDDEV.    (119)

	.  reduce 119 (src line 655)


state 26
	metric_identifier:  STDVAR.    (120)

	.  reduce 120 (src line 655)


state 27
	metric_identifier:  SUM.    (121)

	.  reduce 121 (src line 655)


state 28
	metric_identifier:  TOPK.    (122)

	.  reduce 122 (src line 655)


state 29
	label_set:  LEFT_BRACE.label_set_list RIGHT_BRACE 
	label_set:  LEFT_BRACE.label_set_list COMMA RIGHT_BRACE 
	label_set:  LEFT_BRACE.RIGHT_BRACE 

	error  shift 75
	IDENTIFIER  shift 74
	RIGHT_BRACE  shift 72
	.  error

	label_set_list  goto 71
	label_set_item  goto 73

state 30
	start:  START_SERIES_DESCRIPTION series_description.    (2)

	.  reduce 2 (src line 168)


state 31
	series_description:  metric.series_values 
	series_values: .    (135)

	$end  reduce 135 (src line 699)
	error  shift 77
	EOF  reduce 135 (src line 699)
	SPACE  reduce 135 (src line 699)
	.  error

	series_values  goto 76

state 32
	start:  START_EXPRESSION comment_expr.    (3)
	start:  START_EXPRESSION comment_expr.expr 

	IDENTIFIER  shift 48
	LEFT_BRACE  shift 68
	LEFT_PAREN  shift 50
	METRIC_IDENTIFIER  shift 21
	NUMBER  shift 49
	STRING  shift 51
	ADD  shift 66
	LAND  shift 17
	LOR  shift 18
	LUNLESS  shift 19
	SUB  shift 67
	AVG  shift 55
	BOTTOMK  shift 56
	COUNT  shift 57
	COUNT_VALUES  shift 58
	MAX  shift 59
	MIN  shift 60
	QUANTILE  shift 61
	STDDEV  shift 62
	STDVAR  shift 63
	SUM  shift 64
	TOPK  shift 65
	BY  shift 13
	OFFSET  shift 23
	.  reduce 3 (src line 169)

	aggregate_op  goto 47
	metric_identifier  goto 53
	unary_op  goto 52
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 78
	function_call  goto 38
	label_matchers  goto 54
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 33
	start:  START_EXPRESSION EOF.    (5)

	.  reduce 5 (src line 187)


34: shift/reduce conflict (shift 79(0), red'n 33(0)) on EOF
state 34
	start:  START_EXPRESSION COMMENT.EOF 
	comment_expr:  COMMENT.    (33)
	comment_expr:  COMMENT.comment_expr 

	COMMENT  shift 81
	EOF  shift 79
	.  reduce 33 (src line 291)

	comment_expr  goto 80

state 35
	start:  START_EXPRESSION expr.    (7)
	binary_expr:  expr.ADD bin_modifier expr 
	binary_expr:  expr.DIV bin_modifier expr 
	binary_expr:  expr.EQL bin_modifier expr 
	binary_expr:  expr.GTE bin_modifier expr 
	binary_expr:  expr.GTR bin_modifier expr 
	binary_expr:  expr.LAND bin_modifier expr 
	binary_expr:  expr.LOR bin_modifier expr 
	binary_expr:  expr.LSS bin_modifier expr 
	binary_expr:  expr.LTE bin_modifier expr 
	binary_expr:  expr.LUNLESS bin_modifier expr 
	binary_expr:  expr.MOD bin_modifier expr 
	binary_expr:  expr.MUL bin_modifier expr 
	binary_expr:  expr.NEQ bin_modifier expr 
	binary_expr:  expr.POW bin_modifier expr 
	binary_expr:  expr.SUB bin_modifier expr 
	offset_expr:  expr.OFFSET duration 
	offset_expr:  expr.OFFSET error 
	matrix_selector:  expr.LEFT_BRACKET duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON duration error 
	subquery_expr:  expr.LEFT_BRACKET duration COLON error 
	subquery_expr:  expr.LEFT_BRACKET duration error 
	subquery_expr:  expr.LEFT_BRACKET error 

	LEFT_BRACKET  shift 98
	ADD  shift 82
	DIV  shift 83
	EQL  shift 84
	GTE  shift 85
	GTR  shift 86
	LAND  shift 87
	LOR  shift 88
	LSS  shift 89
	LTE  shift 90
	LUNLESS  shift 91
	MOD  shift 92
	MUL  shift 93
	NEQ  shift 94
	POW  shift 95
	SUB  shift 96
	OFFSET  shift 97
	.  reduce 7 (src line 191)


36: shift/reduce conflict (shift 81(0), red'n 11(0)) on COMMENT
state 36
	expr:  aggregate_expr.    (11)
	expr:  aggregate_expr.comment_expr 

	COMMENT  shift 81
	.  reduce 11 (src line 200)

	comment_expr  goto 99

37: shift/reduce conflict (shift 81(0), red'n 13(0)) on COMMENT
state 37
	expr:  binary_expr.    (13)
	expr:  binary_expr.comment_expr 

	COMMENT  shift 81
	.  reduce 13 (src line 209)

	comment_expr  goto 100

38: shift/reduce conflict (shift 81(0), red'n 15(0)) on COMMENT
state 38
	expr:  function_call.    (15)
	expr:  function_call.comment_expr 

	COMMENT  shift 81
	.  reduce 15 (src line 217)

	comment_expr  goto 101

39: shift/reduce conflict (shift 81(0), red'n 17(0)) on COMMENT
state 39
	expr:  matrix_selector.    (17)
	expr:  matrix_selector.comment_expr 

	COMMENT  shift 81
	.  reduce 17 (src line 225)

	comment_expr  goto 102

40: shift/reduce conflict (shift 81(0), red'n 19(0)) on COMMENT
state 40
	expr:  number_literal.    (19)
	expr:  number_literal.comment_expr 

	COMMENT  shift 81
	.  reduce 19 (src line 233)

	comment_expr  goto 103

41: shift/reduce conflict (shift 81(0), red'n 21(0)) on COMMENT
state 41
	expr:  offset_expr.    (21)
	expr:  offset_expr.comment_expr 

	COMMENT  shift 81
	.  reduce 21 (src line 241)

	comment_expr  goto 104

42: shift/reduce conflict (shift 81(0), red'n 23(0)) on COMMENT
state 42
	expr:  paren_expr.    (23)
	expr:  paren_expr.comment_expr 

	COMMENT  shift 81
	.  reduce 23 (src line 249)

	comment_expr  goto 105

43: shift/reduce conflict (shift 81(0), red'n 25(0)) on COMMENT
state 43
	expr:  string_literal.    (25)
	expr:  string_literal.comment_expr 

	COMMENT  shift 81
	.  reduce 25 (src line 257)

	comment_expr  goto 106

44: shift/reduce conflict (shift 81(0), red'n 27(0)) on COMMENT
state 44
	expr:  subquery_expr.    (27)
	expr:  subquery_expr.comment_expr 

	COMMENT  shift 81
	.  reduce 27 (src line 265)

	comment_expr  goto 107

45: shift/reduce conflict (shift 81(0), red'n 29(0)) on COMMENT
state 45
	expr:  unary_expr.    (29)
	expr:  unary_expr.comment_expr 

	COMMENT  shift 81
	.  reduce 29 (src line 273)

	comment_expr  goto 108

46: shift/reduce conflict (shift 81(0), red'n 31(0)) on COMMENT
state 46
	expr:  vector_selector.    (31)
	expr:  vector_selector.comment_expr 

	COMMENT  shift 81
	.  reduce 31 (src line 281)

	comment_expr  goto 109

state 47
	aggregate_expr:  aggregate_op.aggregate_modifier function_call_body 
	aggregate_expr:  aggregate_op.function_call_body aggregate_modifier 
	aggregate_expr:  aggregate_op.function_call_body 
	aggregate_expr:  aggregate_op.error 

	error  shift 112
	LEFT_PAREN  shift 115
	BY  shift 113
	WITHOUT  shift 114
	.  error

	aggregate_modifier  goto 110
	function_call_body  goto 111

state 48
	function_call:  IDENTIFIER.function_call_body 
	metric_identifier:  IDENTIFIER.    (110)

	LEFT_PAREN  shift 115
	.  reduce 110 (src line 655)

	function_call_body  goto 116

state 49
	number_literal:  NUMBER.    (188)

	.  reduce 188 (src line 770)


state 50
	paren_expr:  LEFT_PAREN.expr RIGHT_PAREN 

	IDENTIFIER  shift 48
	LEFT_BRACE  shift 68
	LEFT_PAREN  shift 50
	METRIC_IDENTIFIER  shift 21
	NUMBER  shift 49
	STRING  shift 51
	ADD  shift 66
	LAND  shift 17
	LOR  shift 18
	LUNLESS  shift 19
	SUB  shift 67
	AVG  shift 55
	BOTTOMK  shift 56
	COUNT  shift 57
	COUNT_VALUES  shift 58
	MAX  shift 59
	MIN  shift 60
	QUANTILE  shift 61
	STDDEV  shift 62
	STDVAR  shift 63
	SUM  shift 64
	TOPK  shift 65
	BY  shift 13
	OFFSET  shift 23
	.  error

	aggregate_op  goto 47
	metric_identifier  goto 53
	unary_op  goto 52
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 117
	function_call  goto 38
	label_matchers  goto 54
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 51
	string_literal:  STRING.    (194)

	.  reduce 194 (src line 806)


state 52
	unary_expr:  unary_op.expr 

	IDENTIFIER  shift 48
	LEFT_BRACE  shift 68
	LEFT_PAREN  shift 50
	METRIC_IDENTIFIER  shift 21
	NUMBER  shift 49
	STRING  shift 51
	ADD  shift 66
	LAND  shift 17
	LOR  shift 18
	LUNLESS  shift 19
	SUB  shift 67
	AVG  shift 55
	BOTTOMK  shift 56
	COUNT  shift 57
	COUNT_VALUES  shift 58
	MAX  shift 59
	MIN  shift 60
	QUANTILE  shift 61
	STDDEV  shift 62
	STDVAR  shift 63
	SUM  shift 64
	TOPK  shift 65
	BY  shift 13
	OFFSET  shift 23
	.  error

	aggregate_op  goto 47
	metric_identifier  goto 53
	unary_op  goto 52
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 118
	function_call  goto 38
	label_matchers  goto 54
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 53
	vector_selector:  metric_identifier.label_matchers 
	vector_selector:  metric_identifier.    (91)

	LEFT_BRACE  shift 68
	.  reduce 91 (src line 579)

	label_matchers  goto 119

state 54
	vector_selector:  label_matchers.    (92)

	.  reduce 92 (src line 589)


state 55
	metric_identifier:  AVG.    (105)
	aggregate_op:  AVG.    (148)

	error  reduce 148 (src line 757)
	LEFT_PAREN  reduce 148 (src line 757)
	BY  reduce 148 (src line 757)
	WITHOUT  reduce 148 (src line 757)
	.  reduce 105 (src line 655)


state 56
	metric_identifier:  BOTTOMK.    (106)
	aggregate_op:  BOTTOMK.    (149)

	error  reduce 149 (src line 757)
	LEFT_PAREN  reduce 149 (src line 757)
	BY  reduce 149 (src line 757)
	WITHOUT  reduce 149 (src line 757)
	.  reduce 106 (src line 655)


state 57
	metric_identifier:  COUNT.    (108)
	aggregate_op:  COUNT.    (150)

	error  reduce 150 (src line 757)
	LEFT_PAREN  reduce 150 (src line 757)
	BY  reduce 150 (src line 757)
	WITHOUT  reduce 150 (src line 757)
	.  reduce 108 (src line 655)


state 58
	metric_identifier:  COUNT_VALUES.    (109)
	aggregate_op:  COUNT_VALUES.    (151)

	error  reduce 151 (src line 757)
	LEFT_PAREN  reduce 151 (src line 757)
	BY  reduce 151 (src line 757)
	WITHOUT  reduce 151 (src line 757)
	.  reduce 109 (src line 655)


state 59
	metric_identifier:  MAX.    (114)
	aggregate_op:  MAX.    (152)

	error  reduce 152 (src line 757)
	LEFT_PAREN  reduce 152 (src line 757)
	BY  reduce 152 (src line 757)
	WITHOUT  reduce 152 (src line 757)
	.  reduce 114 (src line 655)


state 60
	metric_identifier:  MIN.    (116)
	aggregate_op:  MIN.    (153)

	error  reduce 153 (src line 757)
	LEFT_PAREN  reduce 153 (src line 757)
	BY  reduce 153 (src line 757)
	WITHOUT  reduce 153 (src line 757)
	.  reduce 116 (src line 655)


state 61
	metric_identifier:  QUANTILE.    (118)
	aggregate_op:  QUANTILE.    (154)

	error  reduce 154 (src line 757)
	LEFT_PAREN  reduce 154 (src line 757)
	BY  reduce 154 (src line 757)
	WITHOUT  reduce 154 (src line 757)
	.  reduce 118 (src line 655)


state 62
	metric_identifier:  STDDEV.    (119)
	aggregate_op:  STDDEV.    (155)

	error  reduce 155 (src line 757)
	LEFT_PAREN  reduce 155 (src line 757)
	BY  reduce 155 (src line 757)
	WITHOUT  reduce 155 (src line 757)
	.  reduce 119 (src line 655)


state 63
	metric_identifier:  STDVAR.    (120)
	aggregate_op:  STDVAR.    (156)

	error  reduce 156 (src line 757)
	LEFT_PAREN  reduce 156 (src line 757)
	BY  reduce 156 (src line 757)
	WITHOUT  reduce 156 (src line 757)
	.  reduce 120 (src line 655)


state 64
	metric_identifier:  SUM.    (121)
	aggregate_op:  SUM.    (157)

	error  reduce 157 (src line 757)
	LEFT_PAREN  reduce 157 (src line 757)
	BY  reduce 157 (src line 757)
	WITHOUT  reduce 157 (src line 757)
	.  reduce 121 (src line 655)


state 65
	metric_identifier:  TOPK.    (122)
	aggregate_op:  TOPK.    (158)

	error  reduce 158 (src line 757)
	LEFT_PAREN  reduce 158 (src line 757)
	BY  reduce 158 (src line 757)
	WITHOUT  reduce 158 (src line 757)
	.  reduce 122 (src line 655)


state 66
	unary_op:  ADD.    (182)

	.  reduce 182 (src line 762)


state 67
	unary_op:  SUB.    (183)

	.  reduce 183 (src line 762)


state 68
	label_matchers:  LEFT_BRACE.label_match_list RIGHT_BRACE 
	label_matchers:  LEFT_BRACE.label_match_list COMMA RIGHT_BRACE 
	label_matchers:  LEFT_BRACE.RIGHT_BRACE 

	error  shift 124
	IDENTIFIER  shift 123
	RIGHT_BRACE  shift 121
	.  error

	label_match_list  goto 120
	label_matcher  goto 122

state 69
	start:  START_METRIC_SELECTOR vector_selector.    (8)

	.  reduce 8 (src line 193)


state 70
	metric:  metric_identifier label_set.    (103)

	.  reduce 103 (src line 648)


state 71
	label_set:  LEFT_BRACE label_set_list.RIGHT_BRACE 
	label_set:  LEFT_BRACE label_set_list.COMMA RIGHT_BRACE 
	label_set_list:  label_set_list.COMMA label_set_item 
	label_set_list:  label_set_list.error 

	error  shift 127
	COMMA  shift 126
	RIGHT_BRACE  shift 125
	.  error


state 72
	label_set:  LEFT_BRACE RIGHT_BRACE.    (125)

	.  reduce 125 (src line 661)


state 73
	label_set_list:  label_set_item.    (128)

	.  reduce 128 (src line 669)


state 74
	label_set_item:  IDENTIFIER.EQL STRING 
	label_set_item:  IDENTIFIER.EQL error 
	label_set_item:  IDENTIFIER.error 

	error  shift 129
	EQL  shift 128
	.  error


state 75
	label_set_item:  error.    (133)

	.  reduce 133 (src line 682)


state 76
	series_description:  metric series_values.    (134)
	series_values:  series_values.SPACE series_item 
	series_values:  series_values.SPACE 

	SPACE  shift 130
	.  reduce 134 (src line 690)


state 77
	series_values:  error.    (138)

	.  reduce 138 (src line 705)


state 78
	start:  START_EXPRESSION comment_expr expr.    (4)
	binary_expr:  expr.ADD bin_modifier expr 
	binary_expr:  expr.DIV bin_modifier expr 
	binary_expr:  expr.EQL bin_modifier expr 
	binary_expr:  expr.GTE bin_modifier expr 
	binary_expr:  expr.GTR bin_modifier expr 
	binary_expr:  expr.LAND bin_modifier expr 
	binary_expr:  expr.LOR bin_modifier expr 
	binary_expr:  expr.LSS bin_modifier expr 
	binary_expr:  expr.LTE bin_modifier expr 
	binary_expr:  expr.LUNLESS bin_modifier expr 
	binary_expr:  expr.MOD bin_modifier expr 
	binary_expr:  expr.MUL bin_modifier expr 
	binary_expr:  expr.NEQ bin_modifier expr 
	binary_expr:  expr.POW bin_modifier expr 
	binary_expr:  expr.SUB bin_modifier expr 
	offset_expr:  expr.OFFSET duration 
	offset_expr:  expr.OFFSET error 
	matrix_selector:  expr.LEFT_BRACKET duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON duration error 
	subquery_expr:  expr.LEFT_BRACKET duration COLON error 
	subquery_expr:  expr.LEFT_BRACKET duration error 
	subquery_expr:  expr.LEFT_BRACKET error 

	LEFT_BRACKET  shift 98
	ADD  shift 82
	DIV  shift 83
	EQL  shift 84
	GTE  shift 85
	GTR  shift 86
	LAND  shift 87
	LOR  shift 88
	LSS  shift 89
	LTE  shift 90
	LUNLESS  shift 91
	MOD  shift 92
	MUL  shift 93
	NEQ  shift 94
	POW  shift 95
	SUB  shift 96
	OFFSET  shift 97
	.  reduce 4 (src line 177)


state 79
	start:  START_EXPRESSION COMMENT EOF.    (6)

	.  reduce 6 (src line 189)


state 80
	comment_expr:  COMMENT comment_expr.    (34)

	.  reduce 34 (src line 299)


81: shift/reduce conflict (shift 81(0), red'n 33(0)) on COMMENT
state 81
	comment_expr:  COMMENT.    (33)
	comment_expr:  COMMENT.comment_expr 

	COMMENT  shift 81
	.  reduce 33 (src line 291)

	comment_expr  goto 80

state 82
	binary_expr:  expr ADD.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 131
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 83
	binary_expr:  expr DIV.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 136
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 84
	binary_expr:  expr EQL.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 137
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 85
	binary_expr:  expr GTE.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 138
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 86
	binary_expr:  expr GTR.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 139
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 87
	binary_expr:  expr LAND.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 140
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 88
	binary_expr:  expr LOR.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 141
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 89
	binary_expr:  expr LSS.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 142
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 90
	binary_expr:  expr LTE.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 143
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 91
	binary_expr:  expr LUNLESS.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 144
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 92
	binary_expr:  expr MOD.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 145
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 93
	binary_expr:  expr MUL.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 146
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 94
	binary_expr:  expr NEQ.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 147
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 95
	binary_expr:  expr POW.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 148
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 96
	binary_expr:  expr SUB.bin_modifier expr 
	bool_modifier: .    (57)

	BOOL  shift 135
	.  reduce 57 (src line 367)

	bin_modifier  goto 149
	bool_modifier  goto 133
	group_modifiers  goto 132
	on_or_ignoring  goto 134

state 97
	offset_expr:  expr OFFSET.duration 
	offset_expr:  expr OFFSET.error 

	error  shift 151
	DURATION  shift 152
	.  error

	duration  goto 150

state 98
	matrix_selector:  expr LEFT_BRACKET.duration RIGHT_BRACKET 
	subquery_expr:  expr LEFT_BRACKET.duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr LEFT_BRACKET.duration COLON duration error 
	subquery_expr:  expr LEFT_BRACKET.duration COLON error 
	subquery_expr:  expr LEFT_BRACKET.duration error 
	subquery_expr:  expr LEFT_BRACKET.error 

	error  shift 154
	DURATION  shift 152
	.  error

	duration  goto 153

state 99
	expr:  aggregate_expr comment_expr.    (12)

	.  reduce 12 (src line 202)


state 100
	expr:  binary_expr comment_expr.    (14)

	.  reduce 14 (src line 210)


state 101
	expr:  function_call comment_expr.    (16)

	.  reduce 16 (src line 218)


state 102
	expr:  matrix_selector comment_expr.    (18)

	.  reduce 18 (src line 226)


state 103
	expr:  number_literal comment_expr.    (20)

	.  reduce 20 (src line 234)


state 104
	expr:  offset_expr comment_expr.    (22)

	.  reduce 22 (src line 242)


state 105
	expr:  paren_expr comment_expr.    (24)

	.  reduce 24 (src line 250)


state 106
	expr:  string_literal comment_expr.    (26)

	.  reduce 26 (src line 258)


state 107
	expr:  subquery_expr comment_expr.    (28)

	.  reduce 28 (src line 266)


state 108
	expr:  unary_expr comment_expr.    (30)

	.  reduce 30 (src line 274)


state 109
	expr:  vector_selector comment_expr.    (32)

	.  reduce 32 (src line 282)


state 110
	aggregate_expr:  aggregate_op aggregate_modifier.function_call_body 

	LEFT_PAREN  shift 115
	.  error

	function_call_body  goto 155

state 111
	aggregate_expr:  aggregate_op function_call_body.aggregate_modifier 
	aggregate_expr:  aggregate_op function_call_body.    (37)

	BY  shift 113
	WITHOUT  shift 114
	.  reduce 37 (src line 316)

	aggregate_modifier  goto 156

state 112
	aggregate_expr:  aggregate_op error.    (38)

	.  reduce 38 (src line 318)


state 113
	aggregate_modifier:  BY.grouping_labels 

	error  shift 159
	LEFT_PAREN  shift 158
	.  error

	grouping_labels  goto 157

state 114
	aggregate_modifier:  WITHOUT.grouping_labels 

	error  shift 159
	LEFT_PAREN  shift 158
	.  error

	grouping_labels  goto 160

state 115
	function_call_body:  LEFT_PAREN.function_call_args RIGHT_PAREN 
	function_call_body:  LEFT_PAREN.RIGHT_PAREN 

	IDENTIFIER  shift 48
	LEFT_BRACE  shift 68
	LEFT_PAREN  shift 50
	METRIC_IDENTIFIER  shift 21
	NUMBER  shift 49
	RIGHT_PAREN  shift 162
	STRING  shift 51
	ADD  shift 66
	LAND  shift 17
	LOR  shift 18
	LUNLESS  shift 19
	SUB  shift 67
	AVG  shift 55
	BOTTOMK  shift 56
	COUNT  shift 57
	COUNT_VALUES  shift 58
	MAX  shift 59
	MIN  shift 60
	QUANTILE  shift 61
	STDDEV  shift 62
	STDVAR  shift 63
	SUM  shift 64
	TOPK  shift 65
	BY  shift 13
	OFFSET  shift 23
	.  error

	aggregate_op  goto 47
	metric_identifier  goto 53
	unary_op  goto 52
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 163
	function_call  goto 38
	function_call_args  goto 161
	label_matchers  goto 54
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 116
	function_call:  IDENTIFIER function_call_body.    (74)

	.  reduce 74 (src line 445)

